# A.C.E-v3

./: .gitignore  CHANGELOG.md  DEVLOG.md  Makefile  README.md  package-lock.json  package.json
DOCS/: DEVNOTES.md
backend/: package.json  tsconfig.json  vitest.config.ts
backend/src/: db.ts  index.ts  seed.ts  server.ts
backend/src/routes/: ai.ts  calendar.ts  focus.ts  hardware.ts  notes.ts  notifications.ts  settings.ts  subjects.ts  system.ts  tasks.ts  users.ts
backend/src/services/: ai.ts  gpio.ts  hardware.ts  system.ts
backend/src/types/: external.d.ts
backend/src/util/: error.ts  ids.ts
backend/tests/: api.test.ts  db.test.ts
boot-screen/assets/: .gitignore
boot-screen/grub/theme/: theme.txt
boot-screen/scripts/: generate-assets.sh  install-rpi5.sh  install-x86.sh  preview-boot.sh
docs/: MIGRATION.md
frontend/apps/ai/: package.json
frontend/apps/focus/: package.json  tsconfig.json
frontend/apps/home/: package.json  tsconfig.json
frontend/apps/notes/: package.json
frontend/apps/planner/: package.json  tsconfig.json
frontend/apps/settings/: package.json
frontend/apps/statistics/: package.json
frontend/apps/subjects/: package.json
frontend/apps/tasks/: package.json
frontend/c-gtk4/: Makefile  README.md
frontend/c-gtk4/src/: main.c
frontend/cpp-qt/: CMakeLists.txt  README.md
frontend/cpp-qt/src/: main.cpp
frontend/design-system/: package.json  tsconfig.json
frontend/design-system/src/: a11y.css  debounce.ts  (+10 more)
frontend/desktop-shell/: index.html  package.json  tsconfig.json  vite.config.mjs  vite.config.ts
frontend/java-javafx/: README.md  pom.xml
frontend/nextjs/: README.md  next.config.mjs  package-lock.json
frontend/rust-iced/: README.md
frontend/rust-slint/: README.md
frontend/shared/: package.json
gui/: CMakeLists.txt  README.md  index.html  package-lock.json  package.json
gui/css/: ace.css
gui/src/apps/: ace-app-launcher.c  ace-app-launcher.h  ace-calculator.c  ace-clock.c  ace-files.c  ace-notes.c  ace-settings.c  ace-terminal.c
gui/src/shell/: ace-activities.c  ace-activities.h  ace-app.c  ace-app.h  ace-desktop.c  ace-desktop.h  ace-dock.c  ace-dock.h  ace-theme.c  ace-theme.h  ace-topbar.c  ace-topbar.h  ace-window.c  ace-window.h  main.c
gui/src/utils/: ace-utils.c  ace-utils.h
gui/src/wm/: ace-window-manager.c  ace-window-manager.h  ace-wm.c  ace-wm.h
raspberry-pi/: README.md
raspberry-pi/camera/: capture.sh  record.sh  vision-snapshot.sh
raspberry-pi/gpio/: README.md
raspberry-pi/sensors/: monitor.sh
scripts/: dev-all.sh  install-hooks.sh  verify-shells-gated.mjs  verify-shells.mjs
scripts/installer/: README.md  build-image.sh  flash.sh
(+54 files in other folders)
